--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -8,7 +8,7 @@ TODO
 -->
 <html>
   <head>
-    <title>Flask-SocketIO-Chat: {{ room }}</title>
+    <title>{{room.initialPrompt}} by {{room.creator}}</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script
@@ -16,41 +16,93 @@ TODO
       src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"
     ></script>
 
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
-    />
+    /> -->
+    <link
+      rel="stylesheet"
+      href="/static/hacker.css"
+      />
+    
     <script src="https://unpkg.com/vue"></script>
+
+    <style>
+      .storyArea {
+        margin-top: 1.2vh;
+      }
+
+      .nameArea {
+        text-align: right;
+        margin-top: 30px;
+      }
+
+      .textFragment {
+        display: inline-block;
+      }
+
+      .space {
+        display: inline-block;
+
+      }
+
+      .space pre {
+        padding: 0;
+        margin: 0;
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-      <h1>Flask-SocketIO-Chat</h1>
-      <textarea id="chat" cols="80" rows="20"></textarea><br /><br />
-      <br /><br />
-      <a href="#" onclick="leave_room();">Leave this room</a>
+      <!-- <a href="#" onclick="leave_room();">Leave this room</a> -->
 
       <div id="vueArea">
         {% raw %}
-        <div v-if="name">
-          I am: {{ name }}<br />
-          Other person is: {{ otherUser }}
+        <div v-if="name && otherUser">
+          
+            <div class="alert alert-dismissible alert-success  storyArea">
+              <h3 style="display:inline">{{room.initialPrompt}}</h3>
+              <span v-for="message in messages" :class="{
+                'text-primary': message.name == name,
+                'text-success': message.name != name,
+                textFragment: true
+              }">
+                  <span v-if="message.text != '.'" class="space"><pre></pre></span>
+                  {{ message.text }}
+                </span>
+                
+            
+                <div class="nameArea">
+                  By <span class="text-primary">{{ name }}</span> (me) and <span class="text-success">{{ otherUser }}</span>
+                </div>
+          </div>
 
           <div v-if="lastSender != name">
-            <input
-              id="text"
-              size="80"
-              placeholder="Enter your message here"
-              v-on:keyup.enter="sendText"
-            />
+            <div v-for="(completionWords, completionSection) in completions" v-if="completionWords && completionWords.length > 0">
+              <h3>{{completionSection}}</h3>
+              <button
+                type="button"
+                class="btn btn-primary"
+                @click.prevent="sendWord(word)"
+                v-for="word in completionWords"
+              >{{word}}</button>
+            </div>
+          
+              Start exquisitely sexting
+            </button>
           </div>
-          <div v-else>Waiting for {{ otherUser }}</div>
-          <span v-for="message in messages">
-            {{ message.name }}: {{ message.text }}
-          </span>
+          <div v-else class="statusArea panel panel-default"><div class="panel-body">Waiting for {{ otherUser }}</div></div>
         </div>
-        <div v-else>
+        <div v-else class="statusArea panel panel-default"><div class="panel-body">
+          Waiting for another person to join.
+        </div></div>
+                 
+        
+
+        <div v-if="!name">
           <form>
             <div class="form-group">
               <input
@@ -84,7 +136,8 @@ TODO
     const roomId = '{{ roomId }}';
     const room = JSON.parse('{{ room|tojson|safe}}');
     const messages = JSON.parse('{{ messages|tojson|safe}}');
-    const messageArray = _.orderBy(messages.messages, ['ts'], ['desc']);
+    const messageArray = _.orderBy(messages.messages, ['ts'], ['asc']);
+    const completions = JSON.parse('{{ completions|tojson|safe}}');
 
     let lastSender = null;
     if (messageArray.length == 0) {
@@ -125,6 +178,8 @@ TODO
       data: {
         name: initialName,
         messages: messageArray,
+        completions: completions,
+        room,
         lastSender,
         otherUser
       },
@@ -153,7 +208,10 @@ TODO
           console.log('send text');
           text = $('#text').val();
           console.log('trying to send');
-          if (code == 13 && text.length > 0) {
+          this.sendWord(text);
+        },
+        sendWord: function(text) {
+          if (text.length > 0) {
             $('#text').val('');
             app.lastSender = app.name;
             console.log('trying to send / set sender');
@@ -187,7 +245,11 @@ TODO
       socket.on('message', function(data) {
         console.log(data);
         app.lastSender = data.name;
-        app.messages.push(data);
+        app.messages.push({
+          name: data.name,
+          text: data.text
+        });
+        app.completions = data.completions;
         // $('#chat').val($('#chat').val() + data.msg + '\n');
         // $('#chat').scrollBottom($('#chat')[0].scrollHeight);
       });
