display mostly works

--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -32,6 +32,9 @@ TODO
     <style>
       .storyArea {
         margin-top: 1.2vh;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-end;
       }
 
       .nameArea {
@@ -45,13 +48,23 @@ TODO
 
       .space {
         display: inline-block;
+      }
 
+      .storyArea h3 {
+        margin: 0px;
       }
 
       .space pre {
         padding: 0;
         margin: 0;
-        display: none;
+        background-color: unset;
+        border-color: unset;
+        border: unset;
+      }
+
+      .newline {
+        width: 100%;
+        height: 1em;
       }
     </style>
   </head>
@@ -63,21 +76,28 @@ TODO
         {% raw %}
         <div v-if="name && otherUser">
           
-            <div class="alert alert-dismissible alert-success  storyArea">
+            <div class="alert alert-dismissible alert-success">
+
+            <div class="storyArea">
               <h3 style="display:inline">{{room.initialPrompt}}</h3>
-              <span v-for="message in messages" :class="{
-                'text-primary': message.name == name,
-                'text-success': message.name != name,
-                textFragment: true
-              }">
-                  <span v-if="message.text != '.'" class="space"><pre></pre></span>
-                  {{ message.text }}
+              <template v-for="message in messages"> 
+                  <span v-if="message.text != ':newline:' && message.text != '.' && message.text != ','" class="space"><pre> </pre></span>
+                  <div class="newline" v-if="message.text == ':newline:'"></div>
+                  <div class="newline" v-if="message.text == ':newline:'"></div>
+
+                  <span v-else :class="{
+                    'text-primary': message.name == name,
+                    'text-success': message.name != name,
+                    textFragment: true
+                  }">{{ message.text }}</span>
                 </span>
-                
+              </template>
+            </div>
             
                 <div class="nameArea">
                   By <span class="text-primary">{{ name }}</span> (me) and <span class="text-success">{{ otherUser }}</span>
                 </div>
+              
           </div>
 
           <div v-if="lastSender != name">
