--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,7 @@
       }
 
       .has-error .help-block {
-        display: none;
+        /* display: none; */
       }
 
       .form-control {
@@ -49,6 +49,9 @@
       <form>
         <div class="form-group nameGroup">
           <!-- <label for="name">Name</label> -->
+          <span class="help-block" id="nameHelp" 
+          >The name you'll go by in this exquisite sext</span
+        >
           <input
             type="text"
             class="form-control"
@@ -56,13 +59,15 @@
             aria-describedby="nameHelp"
             placeholder="Mx. Fox"
           />
-          <span class="help-block" id="nameHelp" 
-            >The name you'll go by in this exquisite sext</span
-          >
+
           <label class="control-label error" for="name">Name is required</label>
         </div>
         <div class="form-group initialPromptGroup">
           <!-- <label for="initialPrompt">Initial Prompt</label> -->
+          <span class="help-block" id="initialPromptHelp"
+          >The start of the story. Keep it to a few words. <br/>
+          Here's a suggestion.</span
+        >
           <input
             type="text"
             class="form-control"
@@ -73,9 +78,7 @@
             size="50"
             value="{{prompt}}"
           />
-          <span class="help-block" id="initialPromptHelp"
-            >The start of the story. Keep it to a few words. Here's a suggstion.</span
-          >
+ 
           <label class="control-label error" for="initialPrompt">Initial prompt is required</label>
         </div>
         <button type="button" class="btn btn-primary" id="createRoom">
