--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -91,6 +91,16 @@
   {% raw %}
 
   <script>
+    document.getElementById('name').addEventListener("keyup", function(event) {
+      // Number 13 is the "Enter" key on the keyboard
+      if (event.keyCode === 13) {
+        // Cancel the default action, if needed
+        event.preventDefault();
+        // Trigger the button element with a click
+        document.getElementById("createRoom").click();
+      }
+    });
+
     $('#createRoom').click(() => {
       name = $('#name').val();
       initialPrompt = $('#initialPrompt').val();
