newer socket.io

--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -13,7 +13,7 @@ TODO
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script
       type="text/javascript"
-      src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"
+      src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
     ></script>
 
     <!-- <link
