--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -13,7 +13,7 @@ TODO
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script
       type="text/javascript"
-      src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
+      src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"
     ></script>
 
     <!-- <link
@@ -271,18 +271,21 @@ TODO
     });
 
     function joinRoom() {
+      console.log('joining', app.name, roomId)
       socket.emit('joined', {
         name: app.name,
         roomId: roomId
       });
     }
 
-    var socket;
+    var socket = io();
     $(document).ready(function() {
-      socket = io.connect(
-        'http://' + document.domain + ':' + location.port + '/chat'
-      );
-      socket.on('connect', function() {
+      if (!!app.name) {
+        joinRoom();
+      }
+      socket.on('connection', function() {
+        console.log('connect')
+        console.log(app.name);
         if (!!app.name) {
           joinRoom();
         }
