--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -278,12 +278,10 @@ TODO
       });
     }
 
-    var socket = io();
+    var socket;
     $(document).ready(function() {
-      if (!!app.name) {
-        joinRoom();
-      }
-      socket.on('connection', function() {
+      socket = io.connect('http://' + document.domain + ':' + location.port + '/chat');
+      socket.on('connect', function() {
         console.log('connect')
         console.log(app.name);
         if (!!app.name) {
