--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -294,6 +294,7 @@ TODO
       if (app.name != app.room.creator) {
         app.room.participant = app.name;
       }
+      this.setName(app.name);
     }
 
     var socket;
