--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -300,7 +300,7 @@ TODO
       if (app.name != app.room.creator) {
         app.room.participant = app.name;
       }
-      this.setName(app.name);
+      app.setName(app.name);
     }
 
     var socket;
