--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -330,6 +330,7 @@ TODO
       socket.on('setParticipant', function(data) {
         if (app.name == app.room.creator) {
           app.otherUser = data.name;
+          app.room = data.room;
         }
       });
     });
