--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -328,9 +328,13 @@ TODO
         // $('#chat').scrollBottom($('#chat')[0].scrollHeight);
       });
       socket.on('setParticipant', function(data) {
+        console.log('setting participant', data)
         if (app.name == app.room.creator) {
+          console.log('I am the creator so we are updating data')
           app.otherUser = data.name;
           app.room = data.room;
+        } else {
+          console.log('not doing anything with it')
         }
       });
     });
