--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -304,9 +304,8 @@ TODO
       }
     }
 
-    var socket;
+    const socket = io.connect('http://' + document.domain + ':' + location.port + '/chat');
     $(document).ready(function() {
-      socket = io.connect('http://' + document.domain + ':' + location.port + '/chat');
       socket.on('connect', function() {
         console.log('connect')
         console.log(app.name);
